[fix] corrects z-index issue on iceboxToolbar component

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -295,7 +295,7 @@ form .text-field-input div label {
 }
 
 .icebox-toolbar {
-	z-index: 1000;
+	z-index: 50;
 	position: fixed;
 	height: 72px;
 	width: 100%;
@@ -306,7 +306,7 @@ form .text-field-input div label {
 }
 
 .icebox-toolbar-scroll {
-	z-index: 1000;
+	z-index: 50;
 	position: fixed;
 	height: 72px;
 	width: 100%;
